# morphological-analyzer-api

./: .gitignore  README.md  pyproject.toml
api/: main.py
api/domain/: analyzed_text_entity.py  input_text_entity.py  text_analyzer.py
