[tool.poetry]
name = "morphological-analyzer-api"
version = "0.1.0"
description = "Morphological Analyzer API"
authors = ["otajisan <mtaji@morningcode.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fugashi = {extras = ["unidic"], version = "^1.1.2"}
mecab-python3 = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
